# s3proxy

./: .gitignore  Dockerfile  README.md  go.mod  go.sum
.github/workflows/: docker-image.yml
cmd/s3proxy/: main.go
configs/: config.yaml.local
internal/config/: conf.go  conf_test.go  config.go
internal/server/: server.go
internal/server/handlers/: bucket_handler.go  object_handler.go
internal/server/routes/: routes.go
internal/storage/: aws.go  aws_test.go  entity.go  local.go  local_test.go  storage.go
pkg/confutil/: BUILD.bazel  README.md  errors.go  field.go  field_types.go  field_types_test.go  manager.go  mapstructure.go  reflect.go  reflect_test.go  viper.go  viper_test.go
